<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    >

    <include layout="@layout/actionbar_toolbar"
        >
    </include>


    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:id="@+id/pictureCard"
        android:layout_centerInParent="true"
        app:cardCornerRadius="60dp"
        android:elevation="300dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="REGISTRATE AQUI"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/hint_user"
                android:background="@drawable/background_barra"
                android:padding="15dp"
                android:inputType="text"
                android:maxLength="10"
                />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/background_barra"
                android:padding="15dp"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_password"
                android:layout_marginVertical="5dp"
                android:background="@drawable/background_barra"
                android:padding="15dp"
                />
            <EditText
                android:id="@+id/passwordc"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_password"
                android:layout_marginVertical="5dp"
                android:background="@drawable/background_barra"
                android:padding="15dp"
                />


            <Button
                android:id="@+id/registro"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_button_register"
                android:background="@drawable/background_barra"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>